--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="style.css" />
     <title>Debug challenge</title>
   </head>
   <body>
@@ -12,15 +12,16 @@
     <h2 class="rainbow">
       This is a simple page that is meant to be used to debug your JS
       application.
-    </h>
-<section class="bold">
-      <p> There should be multiple bugs inside your html, css and javascript files.
-      There is also a missing tag for this text.</p>
+    </h2>
 
+  <section class="bold">
+      <p>There should be multiple bugs inside your html, css and javascript files.
+      There is also a missing tag for this text.</p>
+</section>
 
     <br />
+     <script src="script.js"></script>
     <input type="text" id="name" placeholder="Enter your name" />
     <div class="display">
-  <script src="script.js"></script>
-    </body>
+  </body>
 </html>
