--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
   </head>
   <body>
     <h1>Welcome to the debug challenge</h1>
-    <h2 class="rainbow">
-      This is a simple page that is meant to be used to debug your JS
+    <section class="rainbow">
+      <h2>This is a simple page that is meant to be used to debug your JS
       application.
     </h2>
-
-  <section class="bold">
-      <p>There should be multiple bugs inside your html, css and javascript files.
-      There is also a missing tag for this text.</p>
 </section>
+  <article class="bold">
+      <p>There should be multiple bugs inside your html, css and javascript files.
+      There is also a missing tag for this text.</p></article>
+
 
     <br />
+    <article class="form">
      <script src="script.js"></script>
     <input type="text" id="name" placeholder="Enter your name" />
     <div class="display">
+      </article>
   </body>
 </html>
