--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   </head>
   <body>
     <h1>Welcome to the debug challenge</h1>
-    <section class="rainbow">
+    
+    <h2 class="rainbow">
       <h2>This is a simple page that is meant to be used to debug your JS
-      application.
-    </h2>
-</section>
-  <article class="bold">
+      application.</h2>
+    
+
+  <section class="bold">
       <p>There should be multiple bugs inside your html, css and javascript files.
-      There is also a missing tag for this text.</p></article>
+      There is also a missing tag for this text.</p></section>
 
 
     <br />
