--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <h1>Welcome to the debug challenge</h1>
-    
+  
     <h2 class="rainbow">
-      <h2>This is a simple page that is meant to be used to debug your JS
+     This is a simple page that is meant to be used to debug your JS
       application.</h2>
-    
+   
 
   <section class="bold">
       <p>There should be multiple bugs inside your html, css and javascript files.
