--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Welcome to the debug challenge</h1>
   
-    <h2 class="rainbow">
+    <h2 class="text">
      This is a simple page that is meant to be used to debug your JS
       application.</h2>
    
